migrates to spring boot 3.2
uses latest language features